# ics2csv

./: LICENSE  README.md  build.bat  clean.bat  ics2csv.py  main.py  pyproject.toml  setup.cfg
src/ics2csv/: ics2csv.py
test_data/: calendar.csv  calendar.ics
