[metadata]
name = ics2csv-busyvar
version = 0.0.1
author = Busyvar
author_email = misererepart@gmail.com
description = a small parser and filter from ics to csv
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/busyvar/ics2csv
project_urls =
    Bug Tracker = https://github.com/busyvar/ics2csv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
